# mcp-webfetch

./: .gitignore  .mcpbignore  Makefile  README.md  manifest.json  mpak.json  pyproject.toml  server.json
.github/workflows/: build-bundle.yml  ci.yaml
src/mcp_webfetch/: SKILL.md  fetcher.py  server.py
tests/: test_fetcher.py  test_server.py
